--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.16.16",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "framer-motion": "^10.16.16",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.2.0",
-    "class-variance-authority": "^0.7.0"
+    "react-router-dom": "^7.6.3",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
